cbits/Bullet.h

void btGImpactBvh_find_collision(void* p0,float* p1,void* p2,float* p3,void* p4); //method: find_collision void (*)( ::btGImpactBvh *,::btTransform const &,::btGImpactBvh *,::btTransform const &,::btPairSet & )
void* btGImpactBvh_get_node_pointer(void *c,int p0); //method: get_node_pointer ::GIM_BVH_TREE_NODE const * ( ::btGImpactBvh::* )( int ) const
int btGImpactBvh_boxQueryTrans(void *c,void* p0,float* p1,void* p2); //method: boxQueryTrans bool ( ::btGImpactBvh::* )( ::btAABB const &,::btTransform const &,::btAlignedObjectArray<int> & ) const
//not supported method: getGlobalBox ::btAABB ( ::btGImpactBvh::* )(  ) const
// error:  - unsupported

int btGImpactBvh_getNodeData(void *c,int p0); //method: getNodeData int ( ::btGImpactBvh::* )( int ) const
void btGImpactBvh_m_box_tree_set(void *c,void* a); //attribute: ::btBvhTree btGImpactBvh->m_box_tree
void* btGImpactBvh_m_box_tree_get(void *c); //attribute: ::btBvhTree btGImpactBvh->m_box_tree
void btGImpactBvh_m_primitive_manager_set(void *c,void* a); //attribute: ::btPrimitiveManagerBase * btGImpactBvh->m_primitive_manager
void* btGImpactBvh_m_primitive_manager_get(void *c); //attribute: ::btPrimitiveManagerBase * btGImpactBvh->m_primitive_manager
void* btGImpactCollisionAlgorithm_new(void* p0,void* p1,void* p2); //constructor: btGImpactCollisionAlgorithm  ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionAlgorithmConstructionInfo const &,::btCollisionObject *,::btCollisionObject * ) 
void btGImpactCollisionAlgorithm_free(void *c);
 
int btGImpactCollisionAlgorithm_getFace1(void *c); //method: getFace1 int ( ::btGImpactCollisionAlgorithm::* )(  ) 
int btGImpactCollisionAlgorithm_getFace0(void *c); //method: getFace0 int ( ::btGImpactCollisionAlgorithm::* )(  ) 
void btGImpactCollisionAlgorithm_gimpact_vs_compoundshape(void *c,void* p0,void* p1,void* p2,void* p3,int p4); //method: gimpact_vs_compoundshape void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btGImpactShapeInterface *,::btCompoundShape *,bool ) 
void btGImpactCollisionAlgorithm_gimpact_vs_shape(void *c,void* p0,void* p1,void* p2,void* p3,int p4); //method: gimpact_vs_shape void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btGImpactShapeInterface *,::btCollisionShape *,bool ) 
void btGImpactCollisionAlgorithm_convex_vs_convex_collision(void *c,void* p0,void* p1,void* p2,void* p3); //method: convex_vs_convex_collision void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btCollisionShape *,::btCollisionShape * ) 
void btGImpactCollisionAlgorithm_setFace0(void *c,int p0); //method: setFace0 void ( ::btGImpactCollisionAlgorithm::* )( int ) 
void btGImpactCollisionAlgorithm_setFace1(void *c,int p0); //method: setFace1 void ( ::btGImpactCollisionAlgorithm::* )( int ) 
void btGImpactCollisionAlgorithm_checkManifold(void *c,void* p0,void* p1); //method: checkManifold void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject * ) 
//not supported method: collide_gjk_triangles void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btGImpactMeshShapePart *,::btGImpactMeshShapePart *,int const *,int ) 
// error: ::btCollisionObject * - ok, ::btCollisionObject * - ok, ::btGImpactMeshShapePart * - ok, ::btGImpactMeshShapePart * - ok,  - unsupported, int - ok, void - ok

void* btGImpactCollisionAlgorithm_newContactManifold(void *c,void* p0,void* p1); //method: newContactManifold ::btPersistentManifold * ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject * ) 
void btGImpactCollisionAlgorithm_addContactPoint(void *c,void* p0,void* p1,float* p2,float* p3,float p4); //method: addContactPoint void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btGImpactCollisionAlgorithm_gimpacttrimeshpart_vs_plane_collision(void *c,void* p0,void* p1,void* p2,void* p3,int p4); //method: gimpacttrimeshpart_vs_plane_collision void ( ::btGImpactCollisionAlgorithm::* )( ::btCollisionObject *,::btCollisionObject *,::btGImpactMeshShapePart *,::btStaticPlaneShape *,bool ) 