Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{#fun btGImpactBvh_find_collision as btGImpactBvh_find_collision'    `(  BtGImpactBvhClass p0 , BtGImpactBvhClass p2 , BtPairSetClass p4 )' =>     {  withBt* `p0'  -- ^ boxset1
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ boxset2
, allocaTransform-  `Transform'  peekTransform* -- ^ trans2
, withBt* `p4'  -- ^ collision_pairs
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#381>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_get_node_pointer as btGImpactBvh_get_node_pointer    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `GIM_BVH_TREE_NODE'  mkGIM_BVH_TREE_NODE* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#308>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_boxQueryTrans as btGImpactBvh_boxQueryTrans    `( BtGImpactBvhClass bc , BtAABBClass p0 , BtAlignedObjectArray_int_Class p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, withTransform* `Transform'  peekTransform* -- ^ transform
, withBt* `p2'  -- ^ collided_results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#308>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_boxQueryTrans as btGImpactBvh_boxQueryTrans'    `( BtGImpactBvhClass bc , BtAABBClass p0 , BtAlignedObjectArray_int_Class p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, allocaTransform-  `Transform'  peekTransform* -- ^ transform
, withBt* `p2'  -- ^ collided_results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#344>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getNodeData as btGImpactBvh_getNodeData    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#253>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_m_box_tree_set    `( BtGImpactBvhClass bc , BtBvhTreeClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#253>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_m_box_tree_get    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  } ->  `BtBvhTree'  mkBtBvhTree* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#254>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_m_primitive_manager_set    `( BtGImpactBvhClass bc , BtPrimitiveManagerBaseClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#254>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_m_primitive_manager_get    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  } ->  `BtPrimitiveManagerBase'  mkBtPrimitiveManagerBase* #}
-- * btGImpactCollisionAlgorithm
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#199>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_new as btGImpactCollisionAlgorithm    `( BtCollisionAlgorithmConstructionInfoClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p2 )' =>     {  withBt* `p0' , withBt* `p1' , withBt* `p2'  } -> `BtGImpactCollisionAlgorithm' mkBtGImpactCollisionAlgorithm* #}
{#fun btGImpactCollisionAlgorithm_free    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#276>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_getFace1 as btGImpactCollisionAlgorithm_getFace1    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#268>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_getFace0 as btGImpactCollisionAlgorithm_getFace0    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#252>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_compoundshape as btGImpactCollisionAlgorithm_gimpact_vs_compoundshape    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtGImpactShapeInterfaceClass p2 , BtCompoundShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
,  `Bool'  -- ^ swapped
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#247>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_shape as btGImpactCollisionAlgorithm_gimpact_vs_shape    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtGImpactShapeInterfaceClass p2 , BtCollisionShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
,  `Bool'  -- ^ swapped
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#172>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_convex_vs_convex_collision as btGImpactCollisionAlgorithm_convex_vs_convex_collision    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtCollisionShapeClass p2 , BtCollisionShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#264>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_setFace0 as btGImpactCollisionAlgorithm_setFace0    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ value
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#272>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_setFace1 as btGImpactCollisionAlgorithm_setFace1    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ value
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_checkManifold as btGImpactCollisionAlgorithm_checkManifold    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_newContactManifold as btGImpactCollisionAlgorithm_newContactManifold    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#143>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_addContactPoint as btGImpactCollisionAlgorithm_addContactPoint    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withVec3* `Vec3'  peekVec3* -- ^ point
, withVec3* `Vec3'  peekVec3* -- ^ normal
,  `Float'  -- ^ distance
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#143>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_addContactPoint as btGImpactCollisionAlgorithm_addContactPoint'    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, allocaVec3-  `Vec3'  peekVec3* -- ^ point
, allocaVec3-  `Vec3'  peekVec3* -- ^ normal
,  `Float'  -- ^ distance
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#194>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpacttrimeshpart_vs_plane_collision as btGImpactCollisionAlgorithm_gimpacttrimeshpart_vs_plane_collision    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtGImpactMeshShapePartClass p2 , BtStaticPlaneShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
,  `Bool'  -- ^ swapped
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#224>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
